--- a/app/src/main/res/layout/fragment_listado_mantenimiento.xml
+++ b/app/src/main/res/layout/fragment_listado_mantenimiento.xml
@@ -73,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:id="@+id/edtIMarca" />
+                    android:id="@+id/edtMarca" />
 
                 <TextView
                     android:layout_width="wrap_content"
